productive card example

--- a/package.json
+++ b/package.json
@@ -3,7 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@carbon/elements": "^10",
+    "@carbon/ibm-products": "latest",
+    "@carbon/icons-react": "^10",
+    "carbon-components": "^10",
+    "carbon-components-react": "^7",
+    "carbon-icons": "latest",
+    "@carbon/charts": "0.55.0",
+    "@carbon/charts-react": "0.55.0",
+    "d3": "^7.0.0",
     "@carbon/react": "^0.17.0",
+    "@console/pal": "^1.487.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
